# study

./: CMakeLists.txt
demo/cjson/: CMakeLists.txt  README.md  main.c
demo/cjson/include/: demo_cjson.h
demo/cjson/src/: demo_cjson.c
demo/gtest/: CMakeLists.txt  main.cpp
demo/gtest/src/: test_one.cc  test_three.cc  test_two.cc
demo/mbedtls/: CMakeLists.txt  mbedtls_demo.c
demo/socket/: CMakeLists.txt  README.md
demo/socket/client/: client.c
demo/socket/server/: server.c
file/testfile/jsonfile/: info.json
tools/base/: CMakeLists.txt
tools/base/include/: felix_base.h  felix_path.h
tools/base/src/: felix_path.c
tools/cli/: CMakeLists.txt  main.c
tools/cli/include/: client.h
tools/cli/src/: client.c
